fixed x-overflow on mobile

--- a/assets/css/challenge2.css
+++ b/assets/css/challenge2.css
@@ -15,6 +15,7 @@ body {
 
 .main {
   position: relative;
+  overflow-x:hidden;
   z-index: 1;
   min-height: 100vh;
 }
